# DelphiX

./: !TODO.txt  CMakeLists.txt  README.md  compat.hpp  contents.hpp  exceptions.hpp  fields.hpp  lang-api.hpp  macros.hpp  primes.hpp  queries.hpp  slices.hpp  text-api.hpp
addon/stemka-api/: stemka-api.cpp
addon/stemka-api/tests/: CMakeLists.txt  test-lang-stemka.cpp
context/: decomposer.hpp  fields-man.hpp  formats.hpp  index-keys.hpp  index-type.hpp  lemmatizer.hpp  make-image.hpp  pack-format.hpp  pack-images.hpp  processor.hpp  ranker-tag.hpp  text-image.hpp  x-contents.hpp
enquote/: compressor.hpp  quotations.hpp
indexer/: dynamic-contents.hpp  layered-contents.hpp  static-contents.hpp
queries/: builder.hpp  parser.hpp
src/: contents.cpp  primes.cpp
src/context/: decomposer.cpp  fields-man.cpp  formats.cpp  formats.hpp  index-keys.cpp  lemmatizer.cpp  make-image.cpp  pack-format.cpp  pack-images.cpp  processor.cpp  serial-formats.hpp  x-contents.cpp  zero-queries.cpp
src/enquote/: compressor.cpp  quotations.cpp
src/indexer/: commit-contents.cpp  commit-contents.hpp  contents-index-merger.cpp  contents-index-merger.hpp  dynamic-bitmap.hpp  dynamic-chains-ringbuffer.hpp  dynamic-chains.hpp  dynamic-contents.cpp  dynamic-entities.hpp  index-layers.cpp  index-layers.hpp  layered-contents.cpp  merger-contents.cpp  merger-contents.hpp  notify-events.hpp  object-holders.hpp  override-entities.cpp  override-entities.hpp  patch-table.hpp  static-contents.cpp  static-entities.hpp  strmatch.cpp  strmatch.hpp
src/queries/: base-queries.cpp  base-queries.hpp  decompressor.hpp  field-set.hpp  mini-queries.cpp  parser.cpp  queries.cpp  query-terms.cpp  query-tools.cpp  query-tools.hpp  rich-queries.cpp  rich-queries.hpp  rich-rankers.hpp
src/storage/: posix-fs-dump-store.cpp  posix-fs-dump-store.hpp  posix-fs-output.cpp  posix-fs-policies.cpp  posix-fs-serial.cpp  posix-fs-storage.cpp
src/textAPI/: dump-as-json.cpp  dump-as-tags.cpp  load-as-json.cpp  load-as-tags.cpp  text-toolkit.cpp
storage/: posix-fs.hpp
tests/: CMakeLists.txt
tests/context/: test-contents.cpp  test-fields-manager.cpp  test-key.cpp  test-lingproc.cpp  test-processor.cpp  test-tag-compressor.cpp
tests/enquote/: test-compressor.cpp  test-quote.cpp
tests/indexer/: test-commit-contents.cpp  test-dynamic-chains-ringbuffer.cpp  test-dynamic-chains.cpp  test-dynamic-contents.cpp  test-dynamic-entities.cpp  test-index-layers.cpp  test-layered-contents.cpp  test-patch-table.cpp  test-static-contents.cpp  test-static-entities.cpp  test-stream-indexing.cpp
tests/queries/: test-mini-queries.cpp  test-queries-parser.cpp  test-rich-queries.cpp
tests/storage/: test-storage-fs-based.cpp
tests/textAPI/: test-textAPI.cpp
tests/toolbox/: dirtool.cpp  dirtool.h
textAPI/: DOM-body.hpp  DOM-dump.hpp  DOM-load.hpp  DOM-text.hpp  pack-words.hpp  word-break.hpp
utils/: CMakeLists.txt  merge-indices.cpp
